force-app/main/default/objects/FM_DSC__c/FM_DSC__c.object-meta.xml
<CustomObject>
    <label>DSC</label>
    <nameField>
        <displayFormat>DSC-{0000}</displayFormat>
        <label>DSC Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DSCs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>