force-app/main/default/objects/FM_DSC__c/fields/FM_Comments__c.field-meta.xml
<CustomField>
    <fullName>FM_Comments__c</fullName>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>