force-app/main/default/objects/FM_DSC__c/fields/FM_Corrective_Action__c.field-meta.xml
<CustomField>
    <fullName>FM_Corrective_Action__c</fullName>
    <label>Corrective Action</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Adjust</fullName>
            </value>
            <value>
                <fullName>Adjusted Sensor</fullName>
            </value>
            <value>
                <fullName>Calibrate</fullName>
            </value>
            <value>
                <fullName>Change Fuse</fullName>
            </value>
            <value>
                <fullName>Clean</fullName>
            </value>
            <value>
                <fullName>Clean/Reset</fullName>
            </value>
            <value>
                <fullName>Disconnect Sensor</fullName>
            </value>
            <value>
                <fullName>Educate/ Advise</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Primed</fullName>
            </value>
            <value>
                <fullName>Primed/Purged</fullName>
            </value>
            <value>
                <fullName>Repair</fullName>
            </value>
            <value>
                <fullName>Replace</fullName>
            </value>
            <value>
                <fullName>Replace Componenet</fullName>
            </value>
            <value>
                <fullName>Replace O-ring</fullName>
            </value>
            <value>
                <fullName>Replace Tubing</fullName>
            </value>
            <value>
                <fullName>Reposition/Adjust</fullName>
            </value>
            <value>
                <fullName>Reset</fullName>
            </value>
            <value>
                <fullName>Reset/Purge</fullName>
            </value>
            <value>
                <fullName>Reset/ Reconnect</fullName>
            </value>
            <value>
                <fullName>Sanitize Performed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>