force-app/main/default/objects/FM_DSC__c/fields/FM_Dispenser__c.field-meta.xml
<CustomField>
    <fullName>FM_Dispenser__c</fullName>
    <label>Dispenser</label>
    <referenceTo>FS_Outlet_Dispenser__c</referenceTo>
    <relationshipLabel>DSCs</relationshipLabel>
    <relationshipName>DSCs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>