force-app/main/default/objects/FM_DSC__c/fields/FM_DSC_Desc__c.field-meta.xml
<CustomField>
    <fullName>FM_DSC_Desc__c</fullName>
    <formula>TEXT(FM_Primary_Code__c) + &#39; &gt; &#39; + TEXT(FM_Secondary_Code__c) + &#39; &gt; &#39; + TEXT(FM_Tertiary_Code__c) + &#39; &gt; &#39; + TEXT(FM_Trouble_found_code__c)</formula>
    <label>DSC Description</label>
    <type>Text</type>
</CustomField>