force-app/main/default/objects/FM_DSC__c/fields/FM_Is_Active_OD__c.field-meta.xml
<CustomField>
    <fullName>FM_Is_Active_OD__c</fullName>
    <formula>FM_Dispenser__r.FS_IsActive__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active (A) / Inactive (I)</label>
    <type>Checkbox</type>
</CustomField>