force-app/main/default/objects/FM_DSC__c/fields/FM_Month__c.field-meta.xml
<CustomField>
    <fullName>FM_Month__c</fullName>
    <formula>MONTH(DATEValue(CreatedDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>