force-app/main/default/objects/FM_DSC__c/fields/FM_Outlet_ACN__c.field-meta.xml
<CustomField>
    <fullName>FM_Outlet_ACN__c</fullName>
    <formula>FM_Dispenser__r.FS_Outlet__r.FS_ACN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outlet ACN</label>
    <type>Text</type>
</CustomField>