force-app/main/default/objects/FM_DSC__c/fields/FM_Outlet_Address__c.field-meta.xml
<CustomField>
    <fullName>FM_Outlet_Address__c</fullName>
    <formula>FM_Dispenser__r.FS_Outlet__r.ShippingStreet +&quot;,&quot;+FM_Dispenser__r.FS_Outlet__r.ShippingCity +&quot;,&quot;+ FM_Dispenser__r.FS_Outlet__r.ShippingState +&quot;,&quot; + FM_Dispenser__r.FS_Outlet__r.ShippingPostalCode   +  &quot;,&quot;+FM_Dispenser__r.FS_Outlet__r.ShippingCountry</formula>
    <label>Outlet Address</label>
    <type>Text</type>
</CustomField>