force-app/main/default/objects/FM_DSC__c/fields/FM_Outlet_Name__c.field-meta.xml
<CustomField>
    <fullName>FM_Outlet_Name__c</fullName>
    <formula>FM_Dispenser__r.FS_Outlet__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outlet Name</label>
    <type>Text</type>
</CustomField>