force-app/main/default/objects/FM_DSC__c/fields/FM_Platform__c.field-meta.xml
<CustomField>
    <fullName>FM_Platform__c</fullName>
    <formula>FM_Dispenser__r.FS_Equip_Type__c</formula>
    <label>Equipment Type</label>
    <type>Text</type>
</CustomField>