force-app/main/default/objects/FM_DSC__c/fields/FM_Primary_Code__c.field-meta.xml
<CustomField>
    <fullName>FM_Primary_Code__c</fullName>
    <label>Primary</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Backroom</fullName>
            </value>
            <value>
                <fullName>Carb Subsystem</fullName>
            </value>
            <value>
                <fullName>CGP/Airvent</fullName>
            </value>
            <value>
                <fullName>Cold Plate</fullName>
            </value>
            <value>
                <fullName>Customer Issues</fullName>
            </value>
            <value>
                <fullName>Drain</fullName>
            </value>
            <value>
                <fullName>Electronics</fullName>
            </value>
            <value>
                <fullName>General Chassis</fullName>
            </value>
            <value>
                <fullName>General Electrical</fullName>
            </value>
            <value>
                <fullName>General Hydraulic</fullName>
            </value>
            <value>
                <fullName>Ice Subsystem</fullName>
            </value>
            <value>
                <fullName>Modem/Connectivity</fullName>
            </value>
            <value>
                <fullName>Nozzle</fullName>
            </value>
            <value>
                <fullName>Product Agitation</fullName>
            </value>
            <value>
                <fullName>SPM-Micro</fullName>
            </value>
            <value>
                <fullName>Valves</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>