force-app/main/default/objects/FM_DSC__c/fields/FM_Secondary_Code__c.field-meta.xml
<CustomField>
    <fullName>FM_Secondary_Code__c</fullName>
    <label>Secondary</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>FM_Primary_Code__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Backflow preventer</fullName>
            </value>
            <value>
                <fullName>CO2 Supply/Regulator</fullName>
            </value>
            <value>
                <fullName>HFCS Supply</fullName>
            </value>
            <value>
                <fullName>Water Supply</fullName>
            </value>
            <value>
                <fullName>Tank</fullName>
            </value>
            <value>
                <fullName>Carb Probe</fullName>
            </value>
            <value>
                <fullName>Pressure Relief</fullName>
            </value>
            <value>
                <fullName>Tubing</fullName>
            </value>
            <value>
                <fullName>CGP/Airvent</fullName>
            </value>
            <value>
                <fullName>Inlet Fittings</fullName>
            </value>
            <value>
                <fullName>Outlet Fittings</fullName>
            </value>
            <value>
                <fullName>Water Lines</fullName>
            </value>
            <value>
                <fullName>BIB Changeout</fullName>
            </value>
            <value>
                <fullName>Cassette/BIB Product</fullName>
            </value>
            <value>
                <fullName>Door</fullName>
            </value>
            <value>
                <fullName>Electrical</fullName>
            </value>
            <value>
                <fullName>Ice Supply</fullName>
            </value>
            <value>
                <fullName>Maintenance</fullName>
            </value>
            <value>
                <fullName>Cup Rest</fullName>
            </value>
            <value>
                <fullName>Drip Tray</fullName>
            </value>
            <value>
                <fullName>Ice Bin Drain</fullName>
            </value>
            <value>
                <fullName>Ice Bin Drain Plug</fullName>
            </value>
            <value>
                <fullName>Main Drain</fullName>
            </value>
            <value>
                <fullName>CDM</fullName>
            </value>
            <value>
                <fullName>Display</fullName>
            </value>
            <value>
                <fullName>HMI</fullName>
            </value>
            <value>
                <fullName>KSM</fullName>
            </value>
            <value>
                <fullName>Macro Board</fullName>
            </value>
            <value>
                <fullName>Micro Board</fullName>
            </value>
            <value>
                <fullName>Power Supply</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>