force-app/main/default/objects/FM_DSC__c/fields/FM_serial_ACN__c.field-meta.xml
<CustomField>
    <fullName>FM_serial_ACN__c</fullName>
    <formula>FM_Dispenser__r.FS_Serial_Number2__c + &#39; - &#39; + FM_Dispenser__r.FS_ACN_NBR__c</formula>
    <label>Serial - ACN</label>
    <type>Text</type>
</CustomField>