force-app/main/default/objects/FM_DSC__c/fields/FM_Serial_nb__c.field-meta.xml
<CustomField>
    <fullName>FM_Serial_nb__c</fullName>
    <formula>FM_Dispenser__r.FS_Serial_Number2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Serial#</label>
    <type>Text</type>
</CustomField>