force-app/main/default/objects/FM_DSC__c/fields/FM_Service_Time__c.field-meta.xml
<CustomField>
    <fullName>FM_Service_Time__c</fullName>
    <formula>right( trim(TEXT( CreatedDate ) ),9)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Time</label>
    <type>Text</type>
</CustomField>