force-app/main/default/objects/FM_DSC__c/fields/FM_Status_OD__c.field-meta.xml
<CustomField>
    <fullName>FM_Status_OD__c</fullName>
    <formula>TEXT( FM_Dispenser__r.FS_Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>