force-app/main/default/objects/FM_DSC__c/fields/FM_Trouble_found_code__c.field-meta.xml
<CustomField>
    <fullName>FM_Trouble_found_code__c</fullName>
    <label>Trouble found</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>FM_Tertiary_Code__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Leaking</fullName>
            </value>
            <value>
                <fullName>Creeping Pressure</fullName>
            </value>
            <value>
                <fullName>Leak</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Out Of CO2</fullName>
            </value>
            <value>
                <fullName>Pressures Out Of Spec</fullName>
            </value>
            <value>
                <fullName>Empty</fullName>
            </value>
            <value>
                <fullName>Broken</fullName>
            </value>
            <value>
                <fullName>Kinked</fullName>
            </value>
            <value>
                <fullName>Not working</fullName>
            </value>
            <value>
                <fullName>Tank/Bladder</fullName>
            </value>
            <value>
                <fullName>Motor</fullName>
            </value>
            <value>
                <fullName>Procon Pump</fullName>
            </value>
            <value>
                <fullName>Pressure Switch</fullName>
            </value>
            <value>
                <fullName>Low Pressure</fullName>
            </value>
            <value>
                <fullName>Clogged</fullName>
            </value>
            <value>
                <fullName>Leaking Tank</fullName>
            </value>
            <value>
                <fullName>Probe Not Working</fullName>
            </value>
            <value>
                <fullName>Out of Calibration</fullName>
            </value>
            <value>
                <fullName>Will Not Prime</fullName>
            </value>
            <value>
                <fullName>Overfilling</fullName>
            </value>
            <value>
                <fullName>Cracked</fullName>
            </value>
            <value>
                <fullName>Loose</fullName>
            </value>
            <value>
                <fullName>Customer Not Orientating Package Correctly</fullName>
            </value>
            <value>
                <fullName>Customer Unaware On How To Change Out Packages</fullName>
            </value>
            <value>
                <fullName>Expired Product</fullName>
            </value>
            <value>
                <fullName>Leaking Product</fullName>
            </value>
            <value>
                <fullName>Out Of Product</fullName>
            </value>
            <value>
                <fullName>Wrong Product Fitting</fullName>
            </value>
            <value>
                <fullName>Missing key</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>