force-app/main/default/objects/FM_DSC__c/fields/FM_W_O__c.field-meta.xml
<CustomField>
    <fullName>FM_W_O__c</fullName>
    <inlineHelpText>Work Order Number</inlineHelpText>
    <label>W.O. #</label>
    <length>15</length>
    <type>Text</type>
</CustomField>