force-app/main/default/objects/FM_DSC__c/fields/FM_Week__c.field-meta.xml
<CustomField>
    <fullName>FM_Week__c</fullName>
    <formula>IF( 
  CEILING( ( DATEValue(CreatedDate) - DATE( YEAR( DATEValue(CreatedDate) ), 1, 1) + 1) / 7) &gt; 52,
  52,
  CEILING( ( DATEValue(CreatedDate) - DATE( YEAR( DATEValue(CreatedDate) ), 1, 1) + 1) / 7)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Week</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>