force-app/main/default/objects/FM_DSC__c/fields/FM_Year__c.field-meta.xml
<CustomField>
    <fullName>FM_Year__c</fullName>
    <formula>YEAR(DATEValue(CreatedDate))</formula>
    <label>Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>